# phylomedb6

./: .dockerignore  README.md  docker-compose.yml  docker-compose2.yml  pyrightconfig.json  start_containers.py  startup.config.ini
_production-server-configs/apache2/: beta.phylomedb.org
apache2-proxy/: Dockerfile  httpd.conf
assets/readme-images/: app-architecture.excalidraw
development-database/: alignment_24.tsv  alignment_relations.tsv  coorthologs.tsv  genomes.tsv  orthologs.tsv  phylome_contents.tsv  phylomes.tsv  schema.sql  spe2ages_jsons.tsv  species.tsv  tree_02.tsv
phylo-data-services/: .dockerignore  Dockerfile  requirements.txt
phylo-data-services/app/: main.py  mypy.ini  requirements.txt
phylo-data-services/app/_scripts/: wait_for_development_db.py
phylo-data-services/app/controllers/: drawers_controller.py  ete_smartview_controller.py  (+6 more)
phylo-data-services/external-sources/get_orthologs_report/: Makefile  README.md  setup.cfg
phylo-data-services/external-sources/get_orthologs_report/get_orthologs_report/: __main__.py  get_orthologs_report.py
phylomedb6-webapp/: .dockerignore  .env.development  .env.production  .env.production.bsccgenomics04  .gitignore  Dockerfile  cypress.config.ts  drizzle.local.config.ts  drizzle.persistentLocal.config.ts  drizzle.remote.config.ts  entrypoint.sh  next.config.mjs  package-lock.json  package.json  persistentLocal.db  tailwind.config.ts
phylomedb6-webapp/_scripts/: set_default_admin.mjs  wait-for-development-db.mjs
phylomedb6-webapp/public/: readMe.txt
scripts/: remove-dangling-docker-junks.sh
(+476 files in other folders)
