[metadata]
name = get_orthologs_report
version = 0.1.0
description = Creates the orthologs-coorthologs report from the given phylome in the database of Phylomedb6."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/heloint/get_orthologs_report
author = Dániel Májer
author_email = majerdaniel93@gmail.com
license = GPL-3.0 license
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    ete3==3.1.3
    lxml==5.3.0
    numpy==2.1.2
    PyQt5==5.15.11
    PyQt5-Qt5==5.15.15
    PyQt5_sip==12.15.0
    six==1.16.0
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    get_orthologs_report = get_orthologs_report.get_orthologs_report:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
